--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ reqwest = {version = "0.11.9",features = ["blocking","json"]}
 error-chain = "0.12.4"
 futures = "0.3" # for our async / await blocks
 tokio = { version = "1.12.0", features = ["full"] }
+rusqlite = { version = "*", features = ["bundled"] }
+chrono = "0.4.19"
