--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ futures = "0.3" # for our async / await blocks
 tokio = { version = "1.12.0", features = ["full"] }
 rusqlite = { version = "*", features = ["bundled"] }
 chrono = "0.4.19"
+openssl = { version = "0.10", features = ["vendored"] }
